# cutler

./: .gitignore  Cargo.toml  LICENSE  README.md  RELEASE.md
.cargo/: config.toml
.github/workflows/: deploy-docs.yml  deploy.yml  release.yml  tests.yml
.gram/: tasks.jsonc
book/: book.toml  mise.toml
book/src/: SUMMARY.md  introduction.md
book/src/backends/: system-preferences.md
book/src/guidelines/: contributing.md
book/src/installation/: installation-methods.md  shell-integrations.md
book/src/misc/: config-features.md  global-flags.md  uninstallation.md
book/src/usage/: basics-and-system-settings.md  external-commands.md  homebrew-backups.md  quickstart.md  remote-sync.md  updates.md
examples/: advanced_types.toml  basic.toml  brew.toml  complete.toml
man/man1/: cutler.1
src/: autosync.rs  context.rs  lib.rs  main.rs
src/brew/: core.rs  mod.rs  types.rs  utils.rs  xcode.rs
src/cli/: args.rs  atomic.rs  mod.rs
src/commands/: apply.rs  check_update.rs  completion.rs  config.rs  cookbook.rs  exec.rs  fetch.rs  init.rs  lock.rs  mod.rs  reset.rs  self_update.rs  status.rs  unapply.rs  unlock.rs
src/commands/brew/: backup.rs  install.rs  mod.rs
src/config/: core.rs  mod.rs  path.rs  remote.rs
src/domains/: convert.rs  core.rs  mod.rs
src/exec/: core.rs  mod.rs
src/snapshot/: core.rs  mod.rs  path.rs
src/util/: io.rs  logging.rs  mod.rs  sha.rs  sudo.rs
tests/: domains_test.rs  external_test.rs  inline_table_test.rs  snapshot_test.rs  type_conversion_test.rs
xtask/: Cargo.toml
xtask/src/: main.rs
